[gd_scene load_steps=8 format=3 uid="uid://cpwgqy30y0dy3"]

[ext_resource type="Script" path="res://scenes/npc/npc.gd" id="1_5vg1h"]
[ext_resource type="Texture2D" uid="uid://4uvtocmc8eir" path="res://scenes/npc/npc_box.svg" id="1_wkfmv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ld6ne"]
radius = 24.0

[sub_resource type="Animation" id="Animation_vdbg0"]
resource_name = "Appear"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopUp:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopUp:rotation")
tracks/1/interp = 4
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.178024, -0.123918, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PopUp:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.07, 0.07), Vector2(0.075, 0.075)]
}

[sub_resource type="Animation" id="Animation_sap4c"]
resource_name = "Disappear"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopUp:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopUp:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.178024]
}

[sub_resource type="Animation" id="Animation_2qcvd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopUp:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopUp:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PopUp:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.07, 0.07)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ousyd"]
_data = {
"Appear": SubResource("Animation_vdbg0"),
"Disappear": SubResource("Animation_sap4c"),
"RESET": SubResource("Animation_2qcvd")
}

[node name="NPC" type="Area2D"]
z_index = -1
script = ExtResource("1_5vg1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ld6ne")

[node name="PopUp" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(-3, -12)
scale = Vector2(0.07, 0.07)
texture = ExtResource("1_wkfmv")
centered = false
offset = Vector2(0, -164)

[node name="AnimationPlayer" type="AnimationPlayer" parent="PopUp"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_ousyd")
}

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
